# folding

./: Cargo.toml  bird_base.fold
folds/: bird_base.fold  sgmo.fold
shaders/: draw.vert
src/: assignment.rs  data.rs  fold_specification.rs  half_edge.rs  interaction.rs  main.rs  model.rs  pattern.rs
src/graphics/: mesh.rs  mod.rs  program.rs
