[package]
name = "folding"
version = "0.1.0"
authors = ["mwalczyk <mwalczyk2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
